public_html/templates/resp/css/modification.css
#header h1 {
    background: url(/img/geograph-logo.svg) no-repeat 10px center/94%;
}

input#nav_toggle, label#nav_label {
	display:none;
}
input#search_toggle, label#search_label {
	display:none;
}
#searchterm {
	background-image:none; /* done with palceholder now! */
}
#searchoptions {
	display:none;
	width:280px;
	text-align:left;
	color:#000066;
	font-weight:normal;
	padding:8px;
}

#searchterm:focus ~ #searchoptions, #searchoptions:hover {
	display:block;
	position:absolute;
	top:34px;
	right:30px;
        background-color:#eeeeff;
	z-index:10000;
}
#login {
	position:absolute;
	left:inherit;
	right:8em;
}


.longLinks a {
	white-space:nowrap;
}

.tabHolder a, .tabHolder span {
	white-space:nowrap;
}

.photopage div.snippet640 {
	font-size:inherit;
	max-width:100%;
}
.photopage div.snippetexpander {
	left:inherit;
	right:20px;
}

/* styling for a 66% resized photo*/
div.photo66
{
  max-width:90%;
}
div.photoguide
{
  max-width:90%;
}

/* some general new styling, mainly used for the photo page, overrides stuff in basic.css */

.numeric {
	font-family: "Times New Roman", Georgia, Verdana, Arial; /* Georgia not great for numbers */
        font-size: 1.05em;
}
.numeric .text {
	font-family: Georgia, Verdana, Arial, serif;
	font-size:1rem;
}

div.ccmessage {
	font-size:1rem;
}

.content_photowhite.photopage abbr[title] {
	text-decoration-color: silver;
}
.content_photoblack.photopage abbr[title] {
	text-decoration-color: #555;
}

/* -------------------- */

.buttonbar { /* there is an existing buttonbar, which may need to check compatibltiy */
	background-color:inherit;
	padding:5px;
	display: flex;
	justify-content: space-between;
	flex-wrap:wrap;
	align-items:baseline;
	gap:6px;
	font-family: Georgia, Arial, sans serif; /* Georgia not great for numbers */
	max-width:1024px;
	margin:0 auto;
}
.buttonbar li {
	background-color:#eee;
	border-radius:10px;
	flex: auto ;
	list-style:none;
	text-align:center;
	padding:4px;
}
.buttonbar a {
	text-decoration:none;
}
.buttonbar select {
	background:none;
	border:0;
	color:blue;
	font-family: Georgia, Arial, sans serif;
	font-size:1.02em;
	max-width:300px;
	cursor: pointer;
	text-align:center;
}
.buttonbar select optgroup {
	color:gray;
	text-align:left;
}
.buttonbar select option {
	color:blue;
}
.buttonbar select option[value=""] {
	color:silver;
}

/* -------------------- */

.content_photoblack .buttonbar li {
	background-color:#333333;
        color:#bbbbbb;
}
.content_photoblack .buttonbar a {
	color:cyan;
}
.content_photoblack .buttonbar select {
	background-color:#333333;
	color:cyan;
}
.content_photoblack .buttonbar select option {
	color:cyan;
}

/* -------------------- */

.content_photogray .buttonbar li {
	background-color:#cccccc;
        color:#444444;
}
.content_photogray .buttonbar a {
	color:#2E9AFE;
}
.content_photogray .buttonbar select {
	background-color:#cccccc;
	color:#2E9AFE;
}
.content_photogray .buttonbar select option {
	color:#2E9AFE;
}

/* -------------------- */

.tagbar {
	margin-top:10px;
	text-align:center;
	overflow: hidden;
	text-overflow: ellipsis;
}
.tagbar a {
	border-radius:4px;
	text-decoration:none;
}
.tagbar small {
	color:gray;
	font-style:italic;
}
.tagbar > * {
	white-space:nowrap;
}

/* -------------------- */
/* move to simpler style for the rastermap */

div.rastermap {
	border:none;
	padding:0;
	margin:0 auto;
}
div.rastermap img[name=tile] {
	border:1px solid silver;
}
div.rastermap .footnote {
	background:none;
	color:gray;
        font-style:italic;
	padding:3px;
	text-align:center;
}

